# todo-pg

./: .env  Cargo.toml
docker/: app.Dockerfile  base.yml  db.Dockerfile
docker/migrations/: 00_todos.sql
src/: main.rs  models.rs  views.rs
static/css/: index.css  scratch.css
static/js/: index.js
