[package]
name = "todo-pg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
axum = { version = "0.7.5", features = ["http2"] }
lfml = "0.1.0"
mime_guess = "2.0.4"
serde = { version = "1.0.197", features = ["derive"] }
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "uuid"] }
tokio = { version = "1.37.0", features = ["full"] }
tower-livereload = "0.9.2"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
